[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = musepy
description = Astropy affiliated package
long_description = A python-based analysis tool for MUSE data
author = Anna Mc Leod
author_email = amcleod@eso.org@eso.org
license = BSD
url = https://github.com/afmcl/MUSEpy
edit_on_github = True
github_project = astropy/astropy

[entry_points]
astropy-package-template-example = packagename.example_mod:main
